Contrast2 fixed

--- a/css/dr4uaccessible.css
+++ b/css/dr4uaccessible.css
@@ -1,1 +1,5 @@
 /* your css here */
+
+.page-wrapper .header-wide-site-banner-wrapper a {
+    color: #000;
+}
